--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>flink-demo</module>
         <module>spark-demo</module>
         <module>clickhouse-demo</module>
+        <module>spring-demo</module>
     </modules>
 
     <properties>
