--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>clickhouse-demo</module>
         <module>spring-demo</module>
         <module>springmvc-demo</module>
+        <module>oss-aliyun-demo</module>
     </modules>
 
     <properties>
@@ -28,6 +29,11 @@
         <java.version>1.8</java.version>
 
         <junit.version>4.13.1</junit.version>
+        <log4j.version>1.2.5</log4j.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
+        <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
+        <slf4j-nop.version>1.7.25</slf4j-nop.version>
+        <slf4j-simple.version>1.7.25</slf4j-simple.version>
 
         <jedis.version>3.5.1</jedis.version>
 
@@ -66,12 +72,34 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.5.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j-simple.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+
     </dependencies>
 
     <!-- 阿里云maven仓库 -->
