--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-demo</module>
         <module>springmvc-demo</module>
         <module>oss-aliyun-demo</module>
+        <module>jdbc-demo</module>
     </modules>
 
     <properties>
@@ -44,6 +45,8 @@
         <mysql.version>5.1.39</mysql.version>
 
         <mssql.version>4.0</mssql.version>
+        <mssql-jdbc.version>9.2.0.jre8</mssql-jdbc.version>
+
 
         <oracle.version>11.2.0.3</oracle.version>
 
@@ -98,7 +101,25 @@
             <version>${slf4j-simple.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
+<!--        <dependency>-->
+<!--            <groupId>com.microsoft.sqlserver</groupId>-->
+<!--            <artifactId>sqljdbc4</artifactId>-->
+<!--            <version>${mssql.version}</version>-->
+<!--        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>${mssql-jdbc.version}</version>
+        </dependency>
 
     </dependencies>
 
