--- a/bigdata-demo/pom.xml
+++ b/bigdata-demo/pom.xml
@@ -8,21 +8,15 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>java-demo</artifactId>
-    <packaging>jar</packaging>
-
-    <description>java-demo</description>
+    <packaging>pom</packaging>
+    <modules>
+        <module>data-warehouse-demo</module>
+    </modules>
+    <artifactId>bigdata-demo</artifactId>
+    <version>0.0.1</version>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>cn.huzunjie.jvm</groupId>
-            <artifactId>jvm-common</artifactId>
-            <version>0.0.1</version>
-        </dependency>
-    </dependencies>
 
 </project>
