--- a/java-demo/pom.xml
+++ b/java-demo/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>jvm-common</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
