spark-streaming-demo init

--- a/bigdata-demo/pom.xml
+++ b/bigdata-demo/pom.xml
@@ -12,6 +12,8 @@
     <modules>
         <module>data-warehouse-demo</module>
         <module>flink_demo</module>
+        <module>flume-demo</module>
+        <module>spark-streaming-demo</module>
     </modules>
     <artifactId>bigdata-demo</artifactId>
     <version>0.0.1</version>
